# ML-Projects

./: .gitignore  pyproject.toml  requirements.txt
1-BasicChatbot/: 1-basicchatbot.ipynb  2-humanintheloop.ipynb
2-MCPExample/: .env  client.py  mathserver.py  weather.py
